# yeshua-architect-platform

./: .env.example  .gitignore  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  agent_gen.py  agent_service.py  db.py  gumroad_uploader.py  main.py  models.py  package_generator.py  proxy.py  scoring.py
data/: platform.db
data/agents/: 107cb2f4d02c0273.md  107cb2f4d02c0273_policy.json  23ee694e2ab5b460.md  23ee694e2ab5b460_policy.json  5a6ef62ea3a97ee9.md  5a6ef62ea3a97ee9_policy.json  a4c7b4752d055864.md  a4c7b4752d055864_policy.json  christian-business-builder.md  e00dfc412cd66c21.md  e00dfc412cd66c21_policy.json  ea468acba13632e6.md  ea468acba13632e6_policy.json  pastor-helper.md
scripts/: setup.sh
static/: style.css
templates/: agent_detail.html  agents.html  build.html  build_status.html  chat.html  dashboard.html  examples.html  five-tests.html  health.html  home.html  how-it-works.html  layout.html  logo_preview.html  pricing.html  receipt.html  six-tests.html
