[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yeshua-architect-platform"
version = "0.1.0"
description = "Yeshua Architect Platform — Free agent auditing + paid builds. Jesus-aligned AI agents."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
]

[project.scripts]
yeshua-platform = "app.main:main"
